--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               </div>
               <div class="ml-3">
                 <p class="text-sm font-medium text-green-800">
-                  Successfully uploaded
+                  Successfully uploaded!
                 </p>
               </div>
             </div>
@@ -42,7 +42,7 @@
               </div>
               <div class="ml-3">
                 <h3 class="text-sm font-medium text-red-800">
-                  There were error importing the data
+                  There were error importing the data.
                 </h3>
               </div>
             </div>
