--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -98,7 +98,9 @@
             </tbody>
           </table>
         </div>
+        <%= paginate @people %>
       </div>
     </div>
   </div>
 </div>
+
