--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6">
   <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-nowrap">
     <div class="ml-4 mt-2">
@@ -5,14 +6,32 @@
         People Data
       </h3>
     </div>
-    <div class="ml-4 mt-2 flex-shrink-0">
+    <div class="flex-1 flex items-center justify-center px-2 lg:ml-6 lg:justify-end">
+      <%= form_tag root_path, method: :get, id: "people-search" do %>
+        <%= hidden_field_tag :direction, params[:direction] %>
+        <%= hidden_field_tag :sort, params[:sort] %>
+        <div class="max-w-lg w-full lg:max-w-xs">
+          <label for="search" class="sr-only">Search</label>
+          <div class="relative">
+            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+              <!-- Heroicon name: search -->
+              <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+              </svg>
+            </div>
+            <input id="search" name="search" class="shadow block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Search" type="search">
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="ml-4 flex-shrink-0">
       <%= form_tag data_import_create_path, multipart: true do %>
         <div class="flex w-full items-center justify-center bg-grey-lighter">
-          <label class="w-36 flex flex-col items-center px-2 py-2 bg-white text-blue rounded-lg shadow tracking-wide uppercase border border-blue cursor-pointer hover:bg-blue-500 hover:text-white">
+          <label class="w-36 flex items-center px-2 py-2 bg-white text-gray-700 rounded-lg shadow tracking-wide border border-blue cursor-pointer hover:bg-indigo-500 hover:text-white">
             <svg class="w-6 h-6" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <path d="M16.88 9.1A4 4 0 0 1 16 17H5a5 5 0 0 1-1-9.9V7a3 3 0 0 1 4.52-2.59A4.98 4.98 0 0 1 17 8c0 .38-.04.74-.12 1.1zM11 11h3l-4-4-4 4h3v3h2v-3z" />
             </svg>
-            <span class="mt-0 text-base leading-normal">Import Data</span>
+            <span class="px-3 mt-0 text-xs leading-normal">Import Data</span>
             <%= file_field_tag :file, class: "hidden", onchange: "this.form.submit();" %>
           </label>
         </div>
