Move logic in helpers into decorators

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -47,34 +47,34 @@
             <thead class="bg-gray-50">
               <tr>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "prefix" %>
+                  <%= @people.link_to_sortable "prefix" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "first_name" %>
+                  <%= @people.link_to_sortable "first_name" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "last_name" %>
+                  <%= @people.link_to_sortable "last_name" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "suffix" %>
+                  <%= @people.link_to_sortable "suffix" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                   Location
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "species" %>
+                  <%= @people.link_to_sortable "species" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "gender" %>
+                  <%= @people.link_to_sortable "gender" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                   Affiliations
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "weapon" %>
+                  <%= @people.link_to_sortable "weapon" %>
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  <%= link_to_sortable "vehicle" %>
+                  <%= @people.link_to_sortable "vehicle" %>
                 </th>
               </tr>
             </thead>
