Try and get a consistent width

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
     <div class="flex items-center justify-center h-screen">
-      <div>
+      <div class="w-3/4">
         <% if flash[:success] %>
           <%= render "success_message" %>
         <% end %>
