--- a/app/views/application/_error_message.html.erb
+++ b/app/views/application/_error_message.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="ml-3">
       <h3 class="text-sm font-medium text-red-800">
-        There were error importing the data.
+        There were errors importing the data.
       </h3>
     </div>
   </div>
