--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -9,11 +9,14 @@ remote:        data-remote
 -%>
 <span class="page<%= ' current' if page.current? %>">
   <% if page.current? %>
-    <a href="<%= url %>" rel="<%= page.rel %>" class="border-indigo-500 text-indigo-600 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium" aria-current="page">
+    <a href="<%= url %>"
+       rel="<%= page.rel %>"
+       class="current-page"
+       aria-current="page">
       <%= page %>
     </a>
   <% else %>
-    <a href="<%= url %>" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium">
+    <a href="<%= url %>" class="other-page">
       <%= page %>
     </a>
   <% end %>
