Add delete data button

--- a/app/javascript/stylesheets/people.scss
+++ b/app/javascript/stylesheets/people.scss
@@ -12,5 +12,5 @@
 }
 
 .data-import {
-  @apply w-36 flex items-center px-2 py-2 bg-white text-gray-700 rounded-lg shadow tracking-wide border border-gray-300 cursor-pointer hover:bg-indigo-500 hover:text-white;
+  @apply w-36 flex items-center px-2 py-2 bg-white text-gray-600 rounded-lg shadow tracking-wide border border-gray-300 cursor-pointer hover:bg-indigo-500 hover:text-white font-medium;
 }
