--- a/app/views/application/_success_message.html.erb
+++ b/app/views/application/_success_message.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="ml-3">
       <p class="text-sm font-medium text-green-800">
-        Successfully uploaded!
+        <%= message %>
       </p>
     </div>
   </div>
