--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,7 +6,8 @@
       </h3>
     </div>
     <%= render "search", path: root_path, params: params %>
-    <%= render "data_import", path: data_import_create_path %>
+    <%= render "import_data", path: data_import_path %>
+    <%= render "delete_data", path: data_import_path %>
   </div>
 </div>
 <div class="px-4 py-5 sm:p-6">
