Make vertical location consistent

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
     <div class="flex items-center justify-center h-screen">
-      <div class="w-3/4">
+      <div class="w-3/4 h-2/3">
         <% if flash[:success] %>
           <%= render "success_message", message: flash[:success] %>
         <% end %>
