Leave search param value in search field

--- a/app/views/people/_search.html.erb
+++ b/app/views/people/_search.html.erb
@@ -20,7 +20,8 @@
                name="search"
                class="person-search"
                placeholder="Search"
-               type="search">
+               type="search"
+               value="<%= params[:search] %>">
       </div>
     </div>
   <% end %>
