--- a/app/javascript/stylesheets/pagination.scss
+++ b/app/javascript/stylesheets/pagination.scss
@@ -1,19 +1,44 @@
 .arrow-left {
-  @apply border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300;
+  @apply border-t-2 border-transparent hover:border-gray-300;
+  @apply font-medium;
+  @apply inline-flex;
+  @apply items-center;
+  @apply pt-4 pr-1;
+  @apply text-sm text-gray-500 hover:text-gray-700;
 }
 
 .arrow-right {
-  @apply border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300;
+  @apply border-t-2 border-transparent hover:border-gray-300;
+  @apply font-medium;
+  @apply inline-flex;
+  @apply items-center;
+  @apply pt-4 pl-1;
+  @apply text-sm text-gray-500 hover:text-gray-700;
 }
 
 .gap {
-  @apply border-transparent text-gray-500 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium;
+  @apply border-t-2 border-transparent;
+  @apply font-medium;
+  @apply inline-flex;
+  @apply items-center;
+  @apply pt-4 px-4;
+  @apply text-sm;
 }
 
 .current-page {
-  @apply border-indigo-500 text-indigo-600 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium;
+  @apply border-indigo-500 border-t-2;
+  @apply font-medium;
+  @apply inline-flex;
+  @apply items-center;
+  @apply pt-4 px-4;
+  @apply text-indigo-600 text-sm;
 }
 
 .other-page {
-  @apply border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium;
+  @apply border-transparent hover:border-gray-300 border-t-2;
+  @apply font-medium;
+  @apply inline-flex;
+  @apply items-center;
+  @apply pt-4 px-4;
+  @apply text-gray-500 hover:text-gray-700 text-sm;
 }
