--- a/app/javascript/stylesheets/people.scss
+++ b/app/javascript/stylesheets/people.scss
@@ -1,16 +1,43 @@
 .person-heading {
-  @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+  @apply font-medium;
+  @apply px-6 py-3;
+  @apply text-left text-xs text-gray-500;
+  @apply tracking-wider;
+  @apply uppercase;
 }
 
 .person-data {
-  @apply px-6 py-4 whitespace-nowrap text-sm text-gray-500;
+  @apply px-6 py-4;
+  @apply text-sm text-gray-500;
+  @apply whitespace-nowrap;
 }
 
 .person-search {
-  @apply shadow block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm;
-
+  @apply bg-white;
+  @apply block;
+  @apply border border-gray-300 focus:border-indigo-500;
+  @apply leading-5;
+  @apply placeholder-gray-500 focus:placeholder-gray-400;
+  @apply focus:outline-none;
+  @apply pl-10 pr-3 py-2;
+  @apply focus:ring-1 focus:ring-indigo-500;
+  @apply rounded-md;
+  @apply shadow;
+  @apply sm:text-sm;
+  @apply w-full;
 }
 
 .data-import {
-  @apply w-36 flex items-center px-2 py-2 bg-white text-gray-600 rounded-lg shadow tracking-wide border border-gray-300 cursor-pointer hover:bg-indigo-500 hover:text-white font-medium;
+  @apply bg-white hover:bg-indigo-500;
+  @apply border border-gray-300;
+  @apply cursor-pointer;
+  @apply flex;
+  @apply font-medium;
+  @apply items-center;
+  @apply px-2 py-2;
+  @apply rounded-lg;
+  @apply shadow;
+  @apply text-gray-600 hover:text-white;
+  @apply tracking-wide;
+  @apply w-36;
 }
