--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -53,40 +53,7 @@
               </tr>
             </thead>
             <tbody>
-              <% @people.each do |person| %>
-                <tr class="<%= cycle("bg-white", "bg-gray-50") %>">
-                  <td class="person-data">
-                    <%= person.prefix %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.first_name %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.last_name %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.suffix %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.location_names %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.species %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.gender %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.affiliation_names %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.weapon %>
-                  </td>
-                  <td class="person-data">
-                    <%= person.vehicle %>
-                  </td>
-                </tr>
-              <% end %>
+              <%= render @people %>
             </tbody>
           </table>
         </div>
