--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -18,38 +18,18 @@
           <table class="min-w-full divide-y divide-gray-200">
             <thead class="bg-gray-50">
               <tr>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "prefix" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "first_name" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "last_name" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "suffix" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "first_location_name",
-                                               "Locations" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "species" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "gender" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "first_affiliation_name",
-                                               "Affiliations" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "weapon" %>
-                </th>
-                <th scope="col" class="person-heading">
-                  <%= @people.link_to_sortable "vehicle" %>
-                </th>
+                <%= @people.sortable_header "prefix" %>
+                <%= @people.sortable_header "first_name" %>
+                <%= @people.sortable_header "last_name" %>
+                <%= @people.sortable_header "suffix" %>
+                <%= @people.sortable_header "first_location_name",
+                                            "Locations" %>
+                <%= @people.sortable_header "species" %>
+                <%= @people.sortable_header "gender" %>
+                <%= @people.sortable_header "first_affiliation_name",
+                                            "Affiliations" %>
+                <%= @people.sortable_header "weapon" %>
+                <%= @people.sortable_header "vehicle" %>
               </tr>
             </thead>
             <tbody>
