Move sorting from Ruby-land to database with Lateral joins

--- a/app/views/people/_search.html.erb
+++ b/app/views/people/_search.html.erb
@@ -13,7 +13,8 @@
                class="person-search"
                placeholder="Search"
                type="search"
-               value="<%= params[:search] %>">
+               value="<%= params[:search] %>"
+               autofocus>
       </div>
     </div>
   <% end %>
